objects/Employee_Test1234567890__c.object
<CustomObject>
    <fields>
        <fullName>Bonus__c</fullName>
        <label>Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Desig__c</fullName>
        <label>Employee Desig</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Associate Software Engineer</fullName>
                </value>
                <value>
                    <fullName>Lead Engineer</fullName>
                </value>
                <value>
                    <fullName>Senior Software Engineer</fullName>
                </value>
                <value>
                    <fullName>Software Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joining_Date__c</fullName>
        <label>Joining Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>PAN_Number__c</fullName>
        <label>PAN Number</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projects</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skill_Set__c</fullName>
        <label>Skill Set</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>.Net</fullName>
                </value>
                <value>
                    <fullName>Angular JS</fullName>
                </value>
                <value>
                    <fullName>QTP</fullName>
                </value>
                <value>
                    <fullName>Selenium</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Functional Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testing1__c</fullName>
        <label>Testing1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>F1</fullName>
                </value>
                <value>
                    <fullName>G1</fullName>
                </value>
                <value>
                    <fullName>H1</fullName>
                </value>
                <value>
                    <fullName>I1</fullName>
                </value>
                <value>
                    <fullName>J1</fullName>
                </value>
                <value>
                    <fullName>K1</fullName>
                </value>
                <value>
                    <fullName>L1</fullName>
                </value>
                <value>
                    <fullName>M1</fullName>
                </value>
                <value>
                    <fullName>N1</fullName>
                </value>
                <value>
                    <fullName>O1</fullName>
                </value>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>R1</fullName>
                </value>
                <value>
                    <fullName>S1</fullName>
                </value>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>U1</fullName>
                </value>
                <value>
                    <fullName>V1</fullName>
                </value>
                <value>
                    <fullName>W1</fullName>
                </value>
                <value>
                    <fullName>X1</fullName>
                </value>
                <value>
                    <fullName>Y1</fullName>
                </value>
                <value>
                    <fullName>Z1</fullName>
                </value>
                <value>
                    <fullName>2A</fullName>
                </value>
                <value>
                    <fullName>2B</fullName>
                </value>
                <value>
                    <fullName>2C</fullName>
                </value>
                <value>
                    <fullName>2D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testing2_2__c</fullName>
        <label>Testing2_2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alaknanda</fullName>
                </value>
                <value>
                    <fullName>Beas</fullName>
                </value>
                <value>
                    <fullName>Brahmaputra</fullName>
                </value>
                <value>
                    <fullName>Chambal</fullName>
                </value>
                <value>
                    <fullName>Ganges</fullName>
                </value>
                <value>
                    <fullName>Godavari</fullName>
                </value>
                <value>
                    <fullName>hugli</fullName>
                </value>
                <value>
                    <fullName>Indus</fullName>
                </value>
                <value>
                    <fullName>Kaveri</fullName>
                </value>
                <value>
                    <fullName>Krishna</fullName>
                </value>
                <value>
                    <fullName>Mahanadi</fullName>
                </value>
                <value>
                    <fullName>Narmada</fullName>
                </value>
                <value>
                    <fullName>Rushikulya</fullName>
                </value>
                <value>
                    <fullName>Sabarmati</fullName>
                </value>
                <value>
                    <fullName>Sarayu</fullName>
                </value>
                <value>
                    <fullName>Sutlej</fullName>
                </value>
                <value>
                    <fullName>Tapti (Tapi)</fullName>
                </value>
                <value>
                    <fullName>Tungabhadra</fullName>
                </value>
                <value>
                    <fullName>Yamuna</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Start_Time__c</fullName>
        <label>Work Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Working_Days__c</fullName>
        <label>Working Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employee_Test1234567890</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee</pluralLabel>
    <recordTypes>
        <fullName>EmpRecordType</fullName>
        <active>true</active>
        <label>EmpRecordType</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EmpSal</fullName>
        <active>true</active>
        <errorConditionFormula>Salary__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>Salary__c</errorDisplayField>
        <errorMessage>Salary must be Greater than Zero</errorMessage>
    </validationRules>
</CustomObject>